CAY-2949 CayenneModeler MCP: dbimport_run tool
preliminary refactoring - sharing preferences between MCP and the Modeler